# hsync

./: LICENSE  README.md  hsync.cabal  hsync.tasks  stack.yaml
src/Sync/: Arc.hs  Base.hs  Dir.hs  Exec.hs  Git.hs  GitLike.hs  Mode.hs  Repo.hs  Ssh.hs  Svn.hs
src/Sync/Base/: Internal.hs  Types.hs
tests/: Test.hs
tools/: Config.hs  hsync.hs
