name: hsync
version: 0.1.0.0
synopsis: sync directories
homepage: https://github.com/mvoidex/hsync
license: BSD3
license-file: LICENSE
author: Alexandr Ruchkin
maintainer: voidex@live.com
category: Utility
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  exposed-modules:
    Sync.Base
  build-depends:
    base >= 4.9 && < 4.10,
    base-unicode-symbols == 0.2.*,
    containers
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -fno-warn-tabs

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base >= 4.9 && < 4.10
  hs-source-dirs: tests
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -fno-warn-tabs

executable hsync
  main-is: hsync.hs
  build-depends:
    base >= 4.9 && < 4.10
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -fno-warn-tabs
  hs-source-dirs: tools
