name: hsync
version: 0.2.0.0
synopsis: sync directories
homepage: https://github.com/mvoidex/hsync
license: BSD3
license-file: LICENSE
author: Alexandr Ruchkin
maintainer: voidex@live.com
category: Utility
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  exposed-modules:
    Sync.Arc
    Sync.Exec
    Sync.Base
    Sync.Base.Types
    Sync.Base.Internal
    Sync.Dir
    Sync.Git
    Sync.GitLike
    Sync.Mode
    Sync.Svn
    Sync.Repo
    Sync.Ssh
  build-depends:
    base >= 4.9 && < 6.0,
    base-unicode-symbols == 0.2.*,
    containers,
    directory,
    exceptions,
    filepath,
    lens,
    mtl,
    process,
    regex-pcre-builtin,
    time
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -Wall -fno-warn-tabs

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    hsync,
    base >= 4.9 && < 6.0,
    base-unicode-symbols == 0.2.*,
    containers,
    hspec >= 2.3 && < 2.8
  hs-source-dirs: tests
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -Wall -fno-warn-tabs

executable hsync
  main-is: hsync.hs
  other-modules:
    Config
  build-depends:
    base >= 4.9 && < 6.0,
    base-unicode-symbols == 0.2.*,
    hsync,
    aeson >= 1.2 && < 1.5,
    ansi-terminal,
    directory == 1.3.*,
    hformat >= 0.2 && < 0.4,
    filepath == 1.4.*,
    optparse-applicative >= 0.13 && < 0.15
  default-language: Haskell2010
  default-extensions: UnicodeSyntax
  ghc-options: -fno-warn-tabs -threaded
  hs-source-dirs: tools
